fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1675,13 +1675,13 @@ span.activeFigure,
 	width:600px;
 	position: relative;
 	z-index: 0;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 .box {
 	position: absolute;
 	z-index: 0;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 .board {
